--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ node {
          app = docker.build("mhikki/nginx")
     }
     stage('Run image') {
-	docker.image('mhikki/nginx'.withRun('-p 80:80') { c ->
+	docker.image('mhikki/nginx').withRun('-p 80:80') { c ->
 
         sh 'docker ps'
         sh 'curl localhost'
